@@ -1,7 +1,6 @@
 /*
  * BaseProviderTestCase.java
  */
-
 /*
  *  Copyright (c) 2001 - 2002 by Matthias Pfisterer
  *
@@ -63,7 +62,7 @@ public class BaseProviderTestCase {
         if (getTestProvider()) {
             String strClassName = getClassName();
             Class<?> cls = Class.forName(strClassName);
-            m_provider = cls.newInstance();
+            m_provider = cls.getDeclaredConstructor().newInstance();
         }
     }
 
@@ -174,4 +173,4 @@ public class BaseProviderTestCase {
     }
 }
 
-/* BaseProviderTestCase.java */
+
